# fc-service-server/src/main/java/eu/gaiax/difs/fc/server/config/SecurityConfig.java
@@ -1,5 +1,10 @@
 package eu.gaiax.difs.fc.server.config;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.ObjectWriter;
+import eu.gaiax.difs.fc.api.generated.model.Error;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import org.keycloak.adapters.springsecurity.authentication.KeycloakAuthenticationProvider;
 import org.keycloak.adapters.springsecurity.config.KeycloakWebSecurityConfigurerAdapter;
 import org.keycloak.adapters.springsecurity.filter.KeycloakAuthenticatedActionsFilter;
@@ -14,21 +19,28 @@ import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.oauth2.server.resource.OAuth2ResourceServerConfigurer;
 import org.springframework.security.core.authority.mapping.SimpleAuthorityMapper;
 import org.springframework.security.core.session.SessionRegistryImpl;
+import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.session.RegisterSessionAuthenticationStrategy;
 import org.springframework.security.web.authentication.session.SessionAuthenticationStrategy;
 
 @Configuration
 @EnableWebSecurity //(debug = true)
 public class SecurityConfig extends KeycloakWebSecurityConfigurerAdapter {
+    private static final ObjectMapper mapper = new ObjectMapper();
+
+    private static final Error FORBIDDEN_ERROR = new Error("forbidden_error",
+            "The user does not have the permission to execute this request.");
     @Value("${keycloak.resource}")
     private String resourceId;
-
 
     /**
      * Defines bean for the Keycloak Authentication Processing Filter.
@@ -132,17 +144,45 @@ public class SecurityConfig extends KeycloakWebSecurityConfigurerAdapter {
     /**
      * Define security constraints for the application resources.
      */
+    // TODO: 13.07.2022 Need to add access by scopes and by access to the participant.
     @Override
     protected void configure(HttpSecurity http) throws Exception {
         super.configure(http);
         http
+                .csrf().disable()
                 .authorizeRequests(authz -> authz
                         .antMatchers(HttpMethod.GET, "/demo").permitAll()
                         .antMatchers(HttpMethod.GET, "/demo/authorized").authenticated()
                         .antMatchers(HttpMethod.GET, "/demo/admin")
-                        .access("hasAuthority('SCOPE_gaia-x') and hasRole('Ro-MU-CA')"))
-                .oauth2ResourceServer(OAuth2ResourceServerConfigurer::jwt).oauth2ResourceServer()
+                        .hasAnyAuthority("SCOPE_gaia-x", "ROLE_Ro-MU-CA")
+                        // Self-Description APIs
+                        .antMatchers(HttpMethod.GET, "/self-descriptions").authenticated()
+                        .antMatchers(HttpMethod.GET, "/self-descriptions/{self_description_hash}").authenticated()
+                        .antMatchers(HttpMethod.POST, "/self-descriptions")
+                        .hasAnyRole("Ro-MU-CA", "Ro-SD-A", "Ro-MU-A")
+                        .antMatchers(HttpMethod.DELETE, "/self-descriptions/{self_description_hash}")
+                        .hasAnyRole("Ro-MU-CA", "Ro-SD-A", "Ro-MU-A")
+                        .antMatchers(HttpMethod.POST, "/self-descriptions/{self_description_hash}/revoke")
+                        .hasAnyRole("Ro-MU-CA", "Ro-SD-A", "Ro-MU-A")
+
+                        .anyRequest().authenticated()
+                )
+                .oauth2ResourceServer(OAuth2ResourceServerConfigurer::jwt)
+                .exceptionHandling()
+                .accessDeniedHandler(accessDeniedHandler())
+                .and()
+                .oauth2ResourceServer()
                 .jwt()
                 .jwtAuthenticationConverter(new CustomJwtAuthenticationConverter(resourceId));
+    }
+
+    private static AccessDeniedHandler accessDeniedHandler() {
+        return (HttpServletRequest request, HttpServletResponse response,
+                AccessDeniedException accessDeniedException) -> {
+            response.setStatus(HttpStatus.FORBIDDEN.value());
+            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+            ObjectWriter ow = mapper.writer().withDefaultPrettyPrinter();
+            response.getWriter().write(ow.writeValueAsString(FORBIDDEN_ERROR));
+        };
     }
 }
